# bawang-putih

./: .env-example  .gitignore  Cargo.toml  build.rs  memory.x  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
src/: constants.rs  main.rs
src/tasks/: crypto.rs  flash.rs  led.rs  mod.rs
src/tasks/core0/: mod.rs
src/tasks/core1/: mod.rs
