[package]
edition = "2021"
name = "nagara-bawang-putih"
version = "1.0.0-alpha.12"
license = "MIT OR Apache-2.0"

[dev-dependencies]
getrandom = { version = "0.2.11", features = ["std"] }

[build-dependencies]
dotenv-build = "0.1.1"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
blake3 = { version = "1.5.0", default-features = false, features = ["pure"] }
byte-slice-cast = { version = "1.2.2", default-features = false }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
crc = "3.0.1"
ed25519-compact = { version = "2.0.6", default-features = false, features = [
    "opt_size",
    "random",
    "x25519",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee1" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee1", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
    "nightly",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee1" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee1", features = [
    "boot2-w25q080",
    "critical-section-impl",
    "intrinsics",
    "rom-func-cache",
    "rom-v2-intrinsics",
    "rt",
    "time-driver",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee1" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee1", features = [
    "tick-hz-1_000_000",
] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee1" }
embedded-hal = "1.0.0-rc.3"
embedded-hal-async = "1.0.0-rc.3"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3" }
embedded-storage-async = "0.4.0"
fixed = { version = "1.23.1", features = ["fail-on-warnings", "num-traits"] }
fixed-macro = "1.2"
futures = { version = "0.3.29", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
getrandom = { version = "0.2.11", features = ["custom"] }
heapless = { version = "0.8", features = ["portable-atomic-critical-section"] }
hex_lit = "0.1.1"
morus = { version = "0.1.3", default-features = false }
panic-probe = { version = "0.3" }
pio = "0.2.1"
pio-proc = "0.2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
postcard = "1.0.8"
rand_core = "0.6.4"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false }
smart-leds = "0.3.0"
static_cell = { version = "2", features = ["nightly"] }
thiserror-no-std = "2.0.2"
usbd-hid = "0.6.1"
